# wikiGPT

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  license.md  pyproject.toml  setup.py
climateGPT/: debug_train.py  export.py  iterate.py  logbook.txt  model.py  prepare.py  prepare_batch.py  prepare_wiki.py  sample.py  tokenize.py  train.py
climateGPT/miscellaneous/: count_total_tokens.py  estimating_optimal_compute_parameters.ipynb
climateGPT/models/: tok2000.model  tok2000.vocab  tok32000.vocab  tok4000.model  tok4000.vocab
scripts/: setup_project.sh
tests/unit/: test_data_iterator.py
wikiGPT/: iterate.py  model.py  prepare.py  sample.py  tokenize.py  train.py
wikiGPT/miscellaneous/: count_total_tokens.py  estimating_optimal_compute_parameters.ipynb  gpt_model_introduction.ipynb
wikiGPT/tokenizers/: tok2000.model  tok2000.vocab  tok32000.model  tok8000.model  tok8000.vocab
