[tool.poetry]
name = "wikiGPT"
version = "0.1.0"
description = "A GPT architecture with utils to download and train on wikipedia."
authors = ["Pierre Pessarossi <pierre.pessarossi@gmail.com>"]
repository = "https://github.com/2p1987/wikiGPT"
packages = [
    {include = "wikiGPT"},
]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
torch = ">=2.0.0"
sentencepiece = ">=0.1.99"
jupyterlab = "*"
ipykernel = "*"
structlog = "*"
tqdm = "*"
datasets = "*"
huggingface-hub = "*"
wandb = "*"
simple-parsing = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
black = {extras = ["toml"], version = "*"}
flake8 = "*"
mypy = "*"
